@@ -1,3 +1,8 @@
+2014-01-08  Jakub Jelinek  <jakub@redhat.com>
+
+	PR ipa/59722
+	* gcc.dg/pr59722.c: New test.
+
 2014-01-08  Bernd Edlinger  <bernd.edlinger@hotmail.de>
 
 	PR middle-end/57748
